Generalise the omission of auxiliary files

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,12 @@
 .DS_Store
 
 # Auxiliary files
-resume.aux
-resume.fdb_latexmk
-resume.fls
-resume.log
-resume.out
-resume.synctex.gz
+*.aux
+*.fdb_latexmk
+*.fls
+*.log
+*.out
+*.synctex.gz
 
 # Output files
 # Relevant output files are moved to docs/ for serving via GitHub Pages
