Synchronize .gitignore across portfolio repos

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
 # System files
 .DS_Store
 
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
 # Auxiliary files
 *.aux
 *.fdb_latexmk
